# barbershop

./: .env.example  .gitignore  context_processors.py  pyproject.toml
barbershop/: settings.py  urls.py
core/: admin.py  ajax.py  apps.py  context_processors.py  data.py  forms.py  models.py  signals.py  telegram.py  urls.py  views.py
core/migrations/: 0001_initial.py
static/: script.js  style.css
templates/: appointment.html  base.html  create_order.html  create_review.html  index.html  masters.html  order_detail.html  order_not_found.html  orders.html  services.html  thanks.html  thanks_4_review.html
templates/includes/: menu.html  order_card.html
templates/users/: form.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: form.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile_detail.html  profile_update_form.html  register.html
