[project]
name = "barbershop"
version = "0.1.0"
description = ""
authors = [
    {name = "Yegor",email = "Ollie_0@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=1.8.2,<3.0.0"]
build-backend = "poetry.core.masonry.api"
